[package]
name = "actix-fnapp"
version = "0.1.0"
edition = "2021"
description = "Provides wrapper macros that will output azure function app binding definitions."

[lib]
path = "src/trigger.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6.0"